--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=AppUser
 spring.datasource.password=1111
+spring.jackson.serialization.fail-on-empty-beans=false
