feat(database): Added actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=AppUser
 spring.datasource.password=1111
+
 spring.jackson.serialization.fail-on-empty-beans=false
+
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+management.endpoints.web.base-path=/monitor
+
+info.application.name=spring-boot-pet
+info.application.version=0.0.1-SHAPSHOT
