feat(database): Added scripts init schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,11 @@ spring.datasource.password=1111
 spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.default_schema=public
 
 management.endpoints.web.base-path=/monitor
 
 info.application.name=spring-boot-pet
 info.application.version=0.0.1-SHAPSHOT
+
