--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,7 @@ databaseChangeLog:
       file: db/changelog/db.changelog-purposes.yaml
   - include:
       file: db/changelog/db.changelog-tasks.yaml
+  - include:
+      file: db/changelog/db.changelog-users.yaml
+  - include:
+      file: db/changelog/db.changelog-roles.yaml
