--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.default_schema=patterns
+spring.jpa.properties.hibernate.default_schema=public
 
 management.endpoints.web.base-path=/monitor
 
